--- a/allbibs.bib
+++ b/allbibs.bib
@@ -1,3 +1,10 @@
+@inproceedings{sawasaki1989tumbling,
+  title={Tumbling objects using a multi-fingered robot},
+  author={Sawasaki, N and Inaba, M and Inoue, H},
+  booktitle={Proceedings of the 20th International Symposium on Industrial Robots and      Robot Exhibition},
+  pages={609--616},
+  year={1989}
+}
 @ARTICLE{Spall1998,
     author={Spall, J.C. and Cristion, John A.},
     journal={Automatic Control, IEEE Transactions on},
@@ -29,11 +36,17 @@
   year={2010},
   publisher={Wiley Online Library}
 }
+@ONLINE{wam_specs,
+  author = {Barrett Technology},
+  title = {WAM Internal PC/104 Configuration},
+  year = {2012},
+  url = {http://barrett.com:8080/wiki/Libbarrett}
+}
 @ONLINE{libbarrett,
   author = {Barrett Technology},
   title = {Libbarrett},
-  year = {2012},
-  url = {http://barrett.com:8080/wiki/Libbarrett}
+  year = {2011},
+  url = {http://support.barrett.com:8080/wiki/WAM/InternalPC104Setup}
 }
 @inproceedings{pais2013learning,
   title={Learning Robot Skills Through Motion Segmentation and Constraints Extraction},
